developerProject/force-app/main/default/objects/OJ_PM__Process_Module__c/OJ_PM__Process_Module__c.object-meta.xml
<CustomObject>
    <label>Process Module</label>
    <nameField>
        <label>Process Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>