developerProject/force-app/main/default/objects/OJ_PM__Process_Module__c/fields/OJ_PM__Apex_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Apex_Method_Name__c</fullName>
    <label>Apex Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>