developerProject/force-app/main/default/objects/OJ_PM__Process_Module__c/fields/OJ_PM__Description__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>